added all the silent hill games to the games object

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     </head>    
     <body>
         <h1>Silent Hill Information Search</h1>
-        <span>Endpoint: insertcycliclinkhere/api/:name</span>
+        <p>A simple API which returns JSON data about the specified Silent Hill video game</p>
+        <span>Endpoint: https://silenthill-api.cyclic.app/api/:name</span>
         
-
+        
     <!-- <script src="main.js"></script> -->
     </body>
 </html>
