--- a/index.html
+++ b/index.html
@@ -3,13 +3,22 @@
     <head>
         <meta charset="UTF-8">
         <title>Silent Hill</title>
+        <link rel="stylesheet" href="css/style.css">
     </head>    
     <body>
         <h1>Silent Hill Information Search</h1>
-        <p>A simple API which returns JSON data about the specified Silent Hill video game</p>
-        <span>Endpoint: https://silenthill-api.cyclic.app/api/:name</span>
-        
-        
-    <!-- <script src="main.js"></script> -->
+        <p>A simple API which returns JSON data about the specified Silent Hill video game</p>  
+    <div>
+        <form action="">
+            <input type="text" name="name" id="name">
+            <button id="submit">Get JSON data</button>
+        </form>
+    </div>
+    <div>
+        <ul id="result-json">
+
+        </ul>
+    </div>
+    <script src="main.js"></script>
     </body>
 </html>
